--- a/app/assets/less/styles.less
+++ b/app/assets/less/styles.less
@@ -25,14 +25,15 @@
 @import "bootstrap/tables.less";
 @import "bootstrap/forms.less";
 @import "bootstrap/buttons.less";
-
+/*
 // Components: common
 @import "bootstrap/component-animations.less";
 @import "bootstrap/dropdowns.less";
 @import "bootstrap/list-group.less";
 @import "bootstrap/wells.less";
+*/
 @import "bootstrap/close.less";
-
+/*
 // Components: Nav
 @import "bootstrap/navs.less";
 @import "bootstrap/button-groups.less";
@@ -44,9 +45,11 @@
 @import "bootstrap/modals.less";
 @import "bootstrap/tooltip.less";
 @import "bootstrap/popovers.less";
-
+*/
 // Components: Misc
 @import "bootstrap/alerts.less";
+@import "bootstrap/input-groups.less";
+/*
 @import "bootstrap/thumbnails.less";
 @import "bootstrap/media.less";
 @import "bootstrap/labels.less";
@@ -54,8 +57,8 @@
 @import "bootstrap/progress-bars.less";
 @import "bootstrap/carousel.less";
 @import "bootstrap/jumbotron.less";
-@import "bootstrap/input-groups.less";
 
+*/
 // Utility classes
 @import "bootstrap/utilities.less"; // Has to be last to override when necessary
 @import "bootstrap/responsive-utilities.less";
@@ -66,25 +69,31 @@
 @import "../fonts/font-awesome/less/font-awesome.less";		// FontAwesome
 
 @import "extend-core.less"; 	//scaffolding, type, code, grid, tables, forms, buttons
+@import "extend-misc.less";		//alerts, thumbnails, labels, badges, progressbars, input groups, carousel...
+/*
 @import "extend-common.less";	//dropdown, list-groups, wells, close
 @import "extend-nav.less";		//navs, button-groups, breadcrumbs, paginations, pager
 @import "extend-popovers.less"; //modals, tooltips, popovers
-@import "extend-misc.less";		//alerts, thumbnails, labels, badges, progressbars, input groups, carousel...
 
+*/
 // Theme Specific
 @import "layout.less";  		// Sidebar/Layout of the theme
+/*
 @import "topnav.less";			// Topnav
 @import "rightbar.less";		// Rightbar
 @import "leftbar.less";			// Leftbar
 
 @import "navbar.less";			// Modified navbar of Bootstrap
+*/
 @import "panels.less";			// Completely overhauled panels
+@import "apps.less";    		// Custom plugin stylings
+/*
 
-@import "tiles.less"; 			// Tiles Component
 @import "feeds.less"; 			// Feeds Component
+@import "tiles.less"; 			// Tiles Component
 @import "tabs.less"; 			// Inline Tabs and Accordions Component
 @import "timeline.less";		// Timeline
-@import "apps.less";    		// Custom plugin stylings
+
 
 @import "demo.less";			// Demo specific
 
@@ -92,5 +101,7 @@
 //----------------------------------
 
 @import "prettify.less";    		// Prettify
+/*
 @import "../plugins/form-colorpicker/less/bootstrap-colorpicker.less";
 @import "../plugins/form-jasnyupload/fileinput.less";
+*/
