--- a/app/assets/less/variables.less
+++ b/app/assets/less/variables.less
@@ -36,7 +36,7 @@
 @brand-sky:				#76c4ed;
 @brand-magenta:			#e06d94;
 @brand-purple:			#e044ab;
-@brand-green:			#569833;
+@brand-green:			#16a085;
 @brand-grape:			#7a869c;
 @brand-toyo:			#556b8d;
 @brand-alizarin:		#e74c3c;
