--- a/app/views/launchform.html
+++ b/app/views/launchform.html
@@ -4,18 +4,18 @@
 	<div class="panel panel-primary">
 		<div class="panel-body" style="border-right: 1px solid #e1e3e8; border-bottom: 1px solid #e1e3e8; border-left: 1px solid #e1e3e8;">
 			<h4 class="text-center" style="margin-bottom: 25px;">Sign up to be notified when we launch!</h4>
-				<form action="/sub" method="post" class="form-horizontal" style="margin-bottom: 0px !important;">
+				<form ng-submit="subscribe()" class="form-horizontal" style="margin-bottom: 0px !important;">
 						<div class="form-group">
 							<div class="col-sm-12">
 								<div class="input-group">
 									<span class="input-group-addon"><i class="fa fa-envelope-o"></i></span>
-									<input type="text" class="form-control" id="email" placeholder="Email">
+									<input type="text" class="form-control" id="email" placeholder="Email" ng-model="formData.email">
 									<div class="input-group-btn">
- 			                          <button type="button" ng-click="subscribeAlert()" class="btn btn-info">Sign up</button>
+ 			                          <button type="submit" class="btn btn-info">Sign up</button>
 			                        </div>
 								</div>
 							</div>
-						</div>
+						</div>	
 						<alert ng-hide="!alert.msg" class="ng-hide" type="success" style="margin-bottom: 0;"><span ng-bind-html="alert.msg | safe_html"></span></alert>
 					</form>
 					
