--- a/app/views/authsuccess.html
+++ b/app/views/authsuccess.html
@@ -1,4 +1,21 @@
 <script type="text/javascript">
-    if (window.opener) {window.opener.focus();}
-    window.close();
+    var cookies;
+
+    var readCookie = function(name,c,C,i){
+        if(cookies){ return cookies[name]; }
+
+        c = document.cookie.split('; ');
+        cookies = {};
+
+        for(i=c.length-1; i>=0; i--){
+           C = c[i].split('=');
+           cookies[C[0]] = C[1];
+        }
+
+        return cookies[name];
+    }
+
+    window.readCookie = readCookie;
+    
+    
 </script>
