--- a/app/views/login.html
+++ b/app/views/login.html
@@ -30,8 +30,8 @@
 		<div class="panel-footer">
 			<a href="#/" class="pull-left btn btn-link" style="padding-left:0">Forgot password?</a>
 			
-			<div class="pull-right">		
-				<a href="#/authtest" class="btn btn-sky" ng-click="signInLinkedin()">Linkedin</a>
+			<div class="pull-right">					
+				<a class="btn btn-sky" ng-click="authenticate('linkedin')">Linkedin</a>
 				<a href="#" class="btn btn-primary" ng-click="signIn(user.username, user.password)">Log In</a>
 			</div>
 		</div>
