fixed client auth issue

--- a/app/views/login.html
+++ b/app/views/login.html
@@ -32,7 +32,7 @@
 			
 			<div class="pull-right">					
 				<a class="btn btn-sky" ng-click="authenticate('linkedin')">Linkedin</a>
-				<a href="#" class="btn btn-primary" ng-click="signIn(user.username, user.password)">Log In</a>
+				<a href="#" class="btn btn-primary" ng-click="authenticate('signin')">Log In</a>
 			</div>
 		</div>
 	</div>
