moved search to header, nav working

--- a/app/assets/less/layout.less
+++ b/app/assets/less/layout.less
@@ -10,7 +10,7 @@ body {
 #page-container {background: @sidebar-background; overflow: hidden}
 #page-content 	{min-height: @sidebar-minimum-height;background: @body-bg; height: 100%;}
 
-#wrap>.container {padding:20px}
+#wrap>.container-fluid {padding:20px}
 
 :focus {outline:none;}
 ::-moz-focus-inner {border:none;}
@@ -108,9 +108,9 @@ footer {
 
 .focusedform {
 	height: 100%;
-	background: white;
+	background: @sidebar-background;
 	padding: 0;
-	
+
 	#page-rightbar, header {display: none;}
 
 	.panel {width: 400px;}
@@ -136,11 +136,6 @@ footer {
   		margin-left: 0px !important;
   		height: 100%;
   		position: relative;
-  		background: url('../img/office_table_wash.jpg') no-repeat center center fixed;
-  		-webkit-background-size: cover;
-  		-moz-background-size: cover;
-  		-o-background-size: cover;
-  		background-size: cover;
 	}
 
 	#page-rightbar, #page-leftbar {
@@ -192,25 +187,34 @@ footer {
 			background-color: @horizontal-submenu-background;
 			border: none;
 			border-radius: 0px;
+			
+			z-index: @zindex-navbar-fixed - 2;
+
 			li a {
+				//Dropdowns
+
 				color: @horizontal-submenu-item-color;
 				&:hover {
 					background: @horizontal-submenu-item-hover-background;
 					color: @horizontal-submenu-item-hover-color;
 					//box-shadow: inset 0 0 0 0 rgba(0, 0, 0, 0) !important;
 				}
+			
+				padding: 10px 15px;
 			}
+
+			padding: 5px 0;
 		}
 		li {
 			a {
 				color: 				@horizontal-menu-color;
 				i {color: 			@horizontal-icon-color;}
 			}
-			&.active a, &.active a i, &.active a:hover, &.active a:hover i {
+			&.active>a, &.active>a i, &.active>a:hover, &.active>a:hover i {
 				background-color: 	@horizontal-active-bg;
 				color: 				@horizontal-active-color;
 			}
-			&.active a:before {
+			&.active>a:before {
 				width: 0px; height: 0px;
 				border-style: solid;
 				border-width: 0 9px 9px 9px;
@@ -220,18 +224,42 @@ footer {
 				position: absolute;
 				bottom: 0px; left: 50%; margin-left: -9px;
 			}
-			a:hover, a:hover i {
-				background: 		@horizontal-hover-bg;
-				color: 				@horizontal-hover-color;
+			&:hover, &:hover i {
+//				background: 		@horizontal-hover-bg;
+//				color: 				@horizontal-hover-color;
 			}
-			a:hover {}
 		}
-		i {margin-right: 2px;}
+		i {margin-right: 8px;}
+
+
+		//Dropdowns
+		&.large-icons-nav>ul>li>ul {
+			// margin-top: -40px;
+			text-align: left;
+		}
+	}
+
+	&:not(.large-icons-nav) {
+		.badge {
+			position: inherit;
+			left: 0;
+			right: 0;
+			margin-left: 5px;
+		}
+	}
+	.badge {
+		left:auto;
+		right: 22px;
 	}
 }
 
 
 @media (max-width: @screen-xs-max) {
+	#horizontal-navbar .navbar-nav {
+		ul {
+			width: 100%;
+		}
+	}
 	#horizontal-navbar .navbar-nav li {
 		&.active a:before {border-color: transparent !important;} // Removes arrow in small screen
 	}
@@ -252,16 +280,16 @@ nav.navbar {
 	// Large Icon Nav
 	#horizontal-navbar.large-icons-nav .navbar-nav {
 		margin-bottom: 0;
-		li {
+		>li {
 			min-width: 120px;
-			a>i {
+			> a > i {
 				font-size: 28px;
 				display: block;
 				text-align: center;
 				margin-top: 5px;
 				margin-right: 0;
 			}
-			span {
+			>a>span {
 				display: block;
 				text-align: center;
 				margin-top: 8px;
@@ -276,7 +304,7 @@ nav.navbar {
 /*Fixed*/
 .fixed-layout {
 	background: @boxed-background;
-	#page-container, header {
+	#page-container, header, header + .navbar {
 		max-width: none !important;
 		width: @boxed-width;
 		margin: 0 auto;
