--- a/app/assets/less/variables.less
+++ b/app/assets/less/variables.less
@@ -370,7 +370,7 @@
 //
 // Reset inverted navbar basics
 @navbar-inverse-color:                      @gray-light;
-@navbar-inverse-bg:                         #202731;
+@navbar-inverse-bg:                         #2b3d51;
 @navbar-inverse-border:                     darken(@navbar-inverse-bg, 5%);
 
 // Inverted navbar links
@@ -401,7 +401,7 @@
 @navbar-inverse-toggle-border-color:        #333;
 
 //Forza Extended
-@navbar-vertical-separator: 				#0e1216;
+@navbar-vertical-separator: 				#2d343d;
 
 
 //== Navs
@@ -911,26 +911,26 @@
 
 
 //(defaulttheme)brand - midnightblue
-@sidebar-divider:					#2d343d;
-@sidebar-minimum-height:			650px;
+//@sidebar-divider:					#2d343d;
+//@sidebar-minimum-height:			650px;
 
-@sidebar-background:				#353e49;
-@sidebar-menu-color:				#8e9eab;
-@sidebar-icon-color:				@sidebar-menu-color;
+//@sidebar-background:				#353e49;
+//@sidebar-menu-color:				#8e9eab;
+//@sidebar-icon-color:				@sidebar-menu-color;
 
-@sidebar-active-bg:					@brand-success;
-@sidebar-active-color:				#fff;
+//@sidebar-active-bg:					@brand-success;
+//@sidebar-active-color:				#fff;
 
-@sidebar-hover-bg:					#3d4854;
-@sidebar-hover-color:				#c1cfde;
+//@sidebar-hover-bg:					#3d4854;
+//@sidebar-hover-color:				#c1cfde;
 
 
-@sidebar-submenu-active-color:      @sidebar-active-color;
-@sidebar-submenu-bg:				@sidebar-divider;
-@sidebar-submenu-color:				#8797a3;
+//@sidebar-submenu-active-color:      @sidebar-active-color;
+//@sidebar-submenu-bg:				@sidebar-divider;
+//@sidebar-submenu-color:				#8797a3;
 
-@search-bg:							@sidebar-divider;
-@search-color:						@sidebar-menu-color;
+//@search-bg:							@sidebar-divider;
+//@search-color:						@sidebar-menu-color;
 
 
 //brand - inverse
@@ -978,25 +978,26 @@
 //--------------------
 
 //brand - (gray) defaultcolor
-// @sidebar-divider:					@gray-light;
+@sidebar-divider:					@gray-light;
+@sidebar-minimum-height:			650px;
 
-// @sidebar-background:				#e6e9ee;
-// @sidebar-menu-color:				@gray-dark;
-// @sidebar-icon-color:				@sidebar-menu-color;
+@sidebar-background:				#e6e9ee;
+@sidebar-menu-color:				@gray-dark;
+@sidebar-icon-color:				@sidebar-menu-color;
 
-// @sidebar-active-bg:					@brand-primary;
-// @sidebar-active-color:				#fff;
+@sidebar-active-bg:					@brand-primary;
+@sidebar-active-color:				#fff;
 
-// @sidebar-hover-bg:					rgba(255, 255, 255, 0.4);
-// @sidebar-hover-color:				@gray-darker;
+@sidebar-hover-bg:					rgba(255, 255, 255, 0.4);
+@sidebar-hover-color:				@gray-darker;
 
 
-// @sidebar-submenu-active-color: 		@gray-darker;
-// @sidebar-submenu-bg:				@sidebar-divider;
-// @sidebar-submenu-color:				@gray-dark;
+@sidebar-submenu-active-color: 		@gray-darker;
+@sidebar-submenu-bg:				@sidebar-divider;
+@sidebar-submenu-color:				@gray-dark;
 
-// @search-bg:							@sidebar-divider;
-// @search-color:						@sidebar-menu-color;
+@search-bg:							@sidebar-divider;
+@search-color:						@sidebar-menu-color;
 //--------------------
 
 //brand - indigo
