--- a/app/views/login.html
+++ b/app/views/login.html
@@ -26,7 +26,7 @@
 					</div>
 					<alert ng-hide="!alert.msg" class="ng-hide" style="margin-bottom: 0;"><span ng-bind-html="alert.msg | safe_html"></span></alert>
 					<div class="panel-footer">
-						<a href="#/" class="pull-left btn btn-link" style="padding-left:0">Forgot password?</a><p ng-if="isAuthenticated()">Logged in!</p>
+						<a href="#/" class="pull-left btn btn-link" style="padding-left:0">Forgot password?</a>
 						
 						<div class="pull-right">					
 							<a class="btn btn-sky" ng-click="authenticate('linkedin')">Linkedin</a>
