--- a/app/assets/less/layout.less
+++ b/app/assets/less/layout.less
@@ -48,14 +48,14 @@ body {
 footer {
 	//border-top: 1px solid @border-darker;
 	background: @body-bg;
-	margin-left: 230px;
+	//margin-left: 230px;
 	color: @gray;
 	height: 30px;
-	margin-top: -30px;
+	//margin-top: -20px;
 	overflow: hidden;
 
 	>div.clearfix {
-		margin: 6px 20px 0;
+		margin: 6px 10px 0;
 		font-size: @font-size-small;
 		color: @gray-darker;
 		a {
@@ -69,6 +69,7 @@ footer {
 	}
 
 	#back-to-top {margin-top: -1px;}
+	
 }
 
 /* Breadcrumb Mod */
@@ -151,155 +152,6 @@ footer {
 
 
 
-/*Horizontal Navigation*/
-
-.navbar {box-shadow: none; }
-
-.layout-horizontal {
-	footer {
-		margin-left: 0px;
-		margin-top: 0px;
-		overflow: hidden;
-	}
-	#page-content {margin-left: 0; }
-
-	nav.navbar {
-		z-index: @zindex-navbar-fixed - 1; //supporting multiple navbar
-	}
-
-
-	#page-leftbar,#leftmenu-trigger {
-  		display: none;
-	}
-	#page-content {
-  		margin-left: 0px !important;
-	}
-}
-
-#horizontal-navbar {
-	.navbar-nav {
-		> .open > a {
-			background: @horizontal-hover-bg;
-			//box-shadow: inset 0px -1px 0px 0 rgba(0, 0, 0, 0.1);
-			i {background: transparent;}
-		}
-		ul {
-			background-color: @horizontal-submenu-background;
-			border: none;
-			border-radius: 0px;
-			
-			z-index: @zindex-navbar-fixed - 2;
-
-			li a {
-				//Dropdowns
-
-				color: @horizontal-submenu-item-color;
-				&:hover {
-					background: @horizontal-submenu-item-hover-background;
-					color: @horizontal-submenu-item-hover-color;
-					//box-shadow: inset 0 0 0 0 rgba(0, 0, 0, 0) !important;
-				}
-			
-				padding: 10px 15px;
-			}
-
-			padding: 5px 0;
-		}
-		li {
-			a {
-				color: 				@horizontal-menu-color;
-				i {color: 			@horizontal-icon-color;}
-			}
-			&.active>a, &.active>a i, &.active>a:hover, &.active>a:hover i {
-				background-color: 	@horizontal-active-bg;
-				color: 				@horizontal-active-color;
-			}
-			&.active>a:before {
-				width: 0px; height: 0px;
-				border-style: solid;
-				border-width: 0 9px 9px 9px;
-				border-color: transparent transparent @body-bg transparent;
-				
-				content: "";
-				position: absolute;
-				bottom: 0px; left: 50%; margin-left: -9px;
-			}
-			&:hover, &:hover i {
-//				background: 		@horizontal-hover-bg;
-//				color: 				@horizontal-hover-color;
-			}
-		}
-		i {margin-right: 8px;}
-
-
-		//Dropdowns
-		&.large-icons-nav>ul>li>ul {
-			// margin-top: -40px;
-			text-align: left;
-		}
-	}
-
-	&:not(.large-icons-nav) {
-		.badge {
-			position: inherit;
-			left: 0;
-			right: 0;
-			margin-left: 5px;
-		}
-	}
-	.badge {
-		left:auto;
-		right: 22px;
-	}
-}
-
-
-@media (max-width: @screen-xs-max) {
-	#horizontal-navbar .navbar-nav {
-		ul {
-			width: 100%;
-		}
-	}
-	#horizontal-navbar .navbar-nav li {
-		&.active a:before {border-color: transparent !important;} // Removes arrow in small screen
-	}
-}
-
-nav.navbar {
-	background: @horizontal-background;
-	.navbar-toggle {
-		&, &:hover, &:focus {
-			background: transparent;
-			color: @horizontal-active-color;
-			border:none;
-		}
-	} 
-}
-
-@media (min-width: @screen-sm) {
-	// Large Icon Nav
-	#horizontal-navbar.large-icons-nav .navbar-nav {
-		margin-bottom: 0;
-		>li {
-			min-width: 120px;
-			> a > i {
-				font-size: 28px;
-				display: block;
-				text-align: center;
-				margin-top: 5px;
-				margin-right: 0;
-			}
-			>a>span {
-				display: block;
-				text-align: center;
-				margin-top: 8px;
-				text-transform: uppercase;
-				letter-spacing: 0.1em;
-				font-size: @font-size-mini;
-			}
-		}
-	}
-}
 
 /*Fixed*/
 .fixed-layout {
