fixed login page

--- a/app/assets/less/layout.less
+++ b/app/assets/less/layout.less
@@ -133,10 +133,16 @@ footer {
 	#page-container {
   		height: 100%;
 	}
+	
 	#page-content {
   		margin-left: 0px !important;
   		height: 100%;
   		position: relative;
+  		background: url('../img/office_table_wash.jpg') no-repeat center center fixed;
+  		-webkit-background-size: cover;
+  		-moz-background-size: cover;
+  		-o-background-size: cover;
+  		background-size: cover;
 	}
 
 	#page-rightbar, #page-leftbar {
