--- a/app/assets/less/styles.less
+++ b/app/assets/less/styles.less
@@ -87,7 +87,7 @@
 @import "navbar.less";			// Modified navbar of Bootstrap
 
 @import "panels.less";			// Completely overhauled panels
-//@import "apps.less";    		// Custom plugin stylings
+@import "apps.less";    		// Custom plugin stylings
 
 
 @import "feeds.less"; 			// Feeds Component
