--- a/app/views/page_widgets_social.html
+++ b/app/views/page_widgets_social.html
@@ -6,7 +6,7 @@
             <div class="row">
                 <!-- Main Title (hidden on small devices for the statistics to fit) -->
                 <div class="col-md-4 col-lg-6 hidden-xs hidden-sm">
-                    <h1>Bend, <strong>Oregon</strong><br><small>Welcome <span ng-bind-html="user.name | words:0"></span>!</small></h1>
+                    <h1><strong>Bend</strong>, Oregon<br><small>Welcome <span ng-bind-html="user.name | words:0"></span>!</small></h1>
                 </div>
                 <!-- END Main Title -->
 
@@ -59,7 +59,7 @@
     <!-- END Social Widgets Header -->
 
     <!-- Advanced Widgets with Users Row -->
-    <div class="row">
+    <div class="row" ng-controller="UsersController">
         <div class="col-sm-6 col-md-4">
             <!-- Advanced Active Theme Color Widget -->
             <div class="widget">
