fixed login page

--- a/app/assets/less/layout.less
+++ b/app/assets/less/layout.less
@@ -43,7 +43,7 @@ body {
 
 /* Footer */
 
-#page-content {padding-bottom: 30px;}
+//#page-content {padding-bottom: 30px;}
 
 footer {
 	//border-top: 1px solid @border-darker;
