--- a/app/assets/less/variables.less
+++ b/app/assets/less/variables.less
@@ -934,25 +934,25 @@
 
 
 //brand - inverse
-// @sidebar-divider:					#43464d;
+@sidebar-divider:					#43464d;
+@sidebar-minimum-height:			650px;
 
-// @sidebar-background:				#4f5259;
-// @sidebar-menu-color:				#a1a4ab;
-// @sidebar-icon-color:				@sidebar-menu-color;
+@sidebar-background:				#32323a;
+@sidebar-menu-color:				#ebf2f2;
+@sidebar-icon-color:				@sidebar-menu-color;
 
-// @sidebar-active-bg:					@brand-danger;
-// @sidebar-active-color:				#fff;
+@sidebar-active-bg:					@brand-danger;
+@sidebar-active-color:				#fff;
 
-// @sidebar-hover-bg:					#5c5f66;
-// @sidebar-hover-color:				#c6c9cf;
+@sidebar-hover-bg:					#2A2A31;
+@sidebar-hover-color:				#ffffff;
 
+@sidebar-submenu-active-color:      @sidebar-active-color;
+@sidebar-submenu-bg:				#222228;
+@sidebar-submenu-color:				#ebf2f2;
 
-// @sidebar-submenu-active-color:      @sidebar-active-color;
-// @sidebar-submenu-bg:				@sidebar-divider;
-// @sidebar-submenu-color:				#8e9399;
-
-// @search-bg:							@sidebar-divider;
-// @search-color:						@sidebar-menu-color;
+@search-bg:							@sidebar-divider;
+@search-color:						@sidebar-menu-color;
 //--------------------
 
 // brand - primary
@@ -978,26 +978,26 @@
 //--------------------
 
 //brand - (gray) defaultcolor
-@sidebar-divider:					@gray-light;
-@sidebar-minimum-height:			650px;
+//@sidebar-divider:					@gray-light;
+//@sidebar-minimum-height:			650px;
 
-@sidebar-background:				#e6e9ee;
-@sidebar-menu-color:				@gray-dark;
-@sidebar-icon-color:				@sidebar-menu-color;
+//@sidebar-background:				#e6e9ee;
+//@sidebar-menu-color:				@gray-dark;
+//@sidebar-icon-color:				@sidebar-menu-color;
 
-@sidebar-active-bg:					@brand-primary;
-@sidebar-active-color:				#fff;
+//@sidebar-active-bg:					@brand-primary;
+//@sidebar-active-color:				#fff;
 
-@sidebar-hover-bg:					rgba(255, 255, 255, 0.4);
-@sidebar-hover-color:				@gray-darker;
+//@sidebar-hover-bg:					rgba(255, 255, 255, 0.4);
+//@sidebar-hover-color:				@gray-darker;
 
 
-@sidebar-submenu-active-color: 		@gray-darker;
-@sidebar-submenu-bg:				@sidebar-divider;
-@sidebar-submenu-color:				@gray-dark;
+//@sidebar-submenu-active-color: 		@gray-darker;
+//@sidebar-submenu-bg:				@sidebar-divider;
+//@sidebar-submenu-color:				@gray-dark;
 
-@search-bg:							@sidebar-divider;
-@search-color:						@sidebar-menu-color;
+//@search-bg:							@sidebar-divider;
+//@search-color:						@sidebar-menu-color;
 //--------------------
 
 //brand - indigo
