--- a/app/assets/less/variables.less
+++ b/app/assets/less/variables.less
@@ -370,13 +370,13 @@
 //
 // Reset inverted navbar basics
 @navbar-inverse-color:                      @gray-light;
-@navbar-inverse-bg:                         #2b3d51;
+@navbar-inverse-bg:                         #f3f4f6;
 @navbar-inverse-border:                     darken(@navbar-inverse-bg, 5%);
 
 // Inverted navbar links
-@navbar-inverse-link-color:                 rgba(255,255,255,0.5);
-@navbar-inverse-fallback-color:             #888; //ie8 has no support for opacity
-@navbar-inverse-link-hover-color:           #fff;
+@navbar-inverse-link-color:                 #394263;
+@navbar-inverse-fallback-color:             #394263; //ie8 has no support for opacity
+@navbar-inverse-link-hover-color:           #000;
 @navbar-inverse-link-hover-bg:              transparent;
 @navbar-inverse-link-active-color:          @navbar-inverse-link-hover-color;
 @navbar-inverse-link-active-bg:             @navbar-vertical-separator;
@@ -385,7 +385,7 @@
 
 // Inverted navbar brand label
 @navbar-inverse-brand-color:                @navbar-inverse-link-color;
-@navbar-inverse-brand-hover-color:          #fff;
+@navbar-inverse-brand-hover-color:          #000;
 @navbar-inverse-brand-hover-bg:             transparent;
 
 // Inverted navbar search
@@ -397,11 +397,48 @@
 
 // Inverted navbar toggle
 @navbar-inverse-toggle-hover-bg:            #333;
-@navbar-inverse-toggle-icon-bar-bg:         #fff;
+@navbar-inverse-toggle-icon-bar-bg:         #000;
 @navbar-inverse-toggle-border-color:        #333;
 
 //Forza Extended
-@navbar-vertical-separator: 				#2d343d;
+@navbar-vertical-separator: 				#e4e7eb;
+
+// Original Midnight Blue Inverted navbar
+//
+// Reset inverted navbar basics
+//@navbar-inverse-color:                      @gray-light;
+//@navbar-inverse-bg:                         #2b3d51;
+//@navbar-inverse-border:                     darken(@navbar-inverse-bg, 5%);
+
+// Inverted navbar links
+//@navbar-inverse-link-color:                 rgba(255,255,255,0.5);
+//@navbar-inverse-fallback-color:             #888; //ie8 has no support for opacity
+//@navbar-inverse-link-hover-color:           #fff;
+//@navbar-inverse-link-hover-bg:              transparent;
+//@navbar-inverse-link-active-color:          @navbar-inverse-link-hover-color;
+//@navbar-inverse-link-active-bg:             @navbar-vertical-separator;
+//@navbar-inverse-link-disabled-color:        #444;
+//@navbar-inverse-link-disabled-bg:           transparent;
+
+// Inverted navbar brand label
+//@navbar-inverse-brand-color:                @navbar-inverse-link-color;
+//@navbar-inverse-brand-hover-color:          #fff;
+//@navbar-inverse-brand-hover-bg:             transparent;
+
+// Inverted navbar search
+// Normal navbar needs no special styles or vars
+//@navbar-inverse-search-bg:                  lighten(@navbar-inverse-bg, 25%);
+//@navbar-inverse-search-bg-focus:            #fff;
+//@navbar-inverse-search-border:              @navbar-inverse-bg;
+//@navbar-inverse-search-placeholder-color:   #ccc;
+
+// Inverted navbar toggle
+//@navbar-inverse-toggle-hover-bg:            #333;
+//@navbar-inverse-toggle-icon-bar-bg:         #fff;
+//@navbar-inverse-toggle-border-color:        #333;
+
+//Forza Extended
+//@navbar-vertical-separator: 				#2d343d;
 
 
 //== Navs
