--- a/app/views/page_widgets_social.html
+++ b/app/views/page_widgets_social.html
@@ -42,7 +42,7 @@
         </div>
     </div>
     <!-- END Social Widgets Header -->
-<div id="userlist" ng-controller="UsersController">          
+<div id="userlist">          
     <div class="row" style="margin-left: 10px; margin-right: 10px;">            
         <div class="col-sm-6 col-lg-3" ng-repeat="item in users.results" ng-include="'views/templates/user_renderer.html'">                  
         </div>   
