beautiful nav and top bar

--- a/app/assets/less/topnav.less
+++ b/app/assets/less/topnav.less
@@ -208,7 +208,7 @@ a.username {
 	&:hover {text-decoration: none;background: none;}
 }
 
-header.navbar {margin-bottom:0px; border:none;}
+header.navbar {margin-bottom:0px; border-top: 2px solid #569833;}
 
 /* Nav and Sidebar Badges
 // ------------------------*/
