--- a/app/assets/less/leftbar.less
+++ b/app/assets/less/leftbar.less
@@ -22,7 +22,8 @@
 	i {color: @sidebar-icon-color; margin-left: 1px; margin-right: 8px; min-width: 18px; text-align: center; display: inline-block; opacity: .5;}
 	
 	.heading {
-		opacity: .5;
+		color: @sidebar-icon-color;
+		padding-left: 5px;
 	}
 	
 	.divider {
