--- a/app/views/mentors.html
+++ b/app/views/mentors.html
@@ -42,11 +42,17 @@
             </div>
         </div>
         <!-- END Social Widgets Header -->
-    <div id="peoplelist">          
+    <div id="peoplelist">
         <div class="row" style="margin-left: 10px; margin-right: 10px;">            
-            <div class="col-sm-6 col-lg-3 animate-repeat" ng-repeat="item in users.results" ng-include="'views/templates/people_renderer.html'">                  
-            </div>   
-        </div> 
+            <div class="col-sm-6 col-lg-3" ng-repeat="item in users.results" ng-include="'views/templates/people_renderer.html'">                  
+            </div>            
+        </div>              
+        <div class="row" style="margin-left: 1.5%; margin-right: 1.5%;"> 
+            <ul class="pager">
+                <li ng-if="users.prev" class="previous"><a ng-click="getUsers(users.prev)"><i class="fa fa-arrow-left"></i> Prev</a></li>
+                <li ng-if="users.next" class="next"><a ng-click="getUsers(users.next)">Next <i class="fa fa-arrow-right"></i></a></li>
+            </ul>
+        </div>
     </div>
 
 </div>
