fixed submenu grey

--- a/app/assets/less/variables.less
+++ b/app/assets/less/variables.less
@@ -978,14 +978,14 @@
 @sidebar-menu-color:				#ebf2f2;
 @sidebar-icon-color:				@sidebar-menu-color;
 
-@sidebar-active-bg:					@brand-danger;
+@sidebar-active-bg:					#222228;
 @sidebar-active-color:				#fff;
 
 @sidebar-hover-bg:					#2A2A31;
 @sidebar-hover-color:				#ffffff;
 
 @sidebar-submenu-active-color:      @sidebar-active-color;
-@sidebar-submenu-bg:				#222228;
+@sidebar-submenu-bg:				#2A2A31;
 @sidebar-submenu-color:				#ebf2f2;
 
 @search-bg:							@sidebar-divider;
