--- a/app/assets/less/leftbar.less
+++ b/app/assets/less/leftbar.less
@@ -46,10 +46,10 @@
 	a:hover {background-color: @sidebar-hover-bg; color: @sidebar-hover-color; 
 		i {color: @sidebar-hover-color; opacity: 1;}
 	}
-	>li.active>a {background: @sidebar-submenu-bg; color: @sidebar-active-color; padding-left: 8px; border-left: 2px solid @brand-primary;}
+	>li.active>a {background: @sidebar-active-bg; color: @sidebar-active-color; padding-left: 8px; border-left: 2px solid @brand-primary;}
 	
 	// Submenu Styles - Level 2
-	ul li.active>a { color: @sidebar-submenu-active-color !important;} 
+	ul li.active>a { background: @sidebar-submenu-bg; color: @sidebar-submenu-active-color !important;} 
 	ul li a {padding: 5px 10px 5px 37px;}
 	ul li.active:not(.open)>a {font-weight: 600; color: #fff;}
 	   li ul {display: none;}
