--- a/app/assets/less/leftbar.less
+++ b/app/assets/less/leftbar.less
@@ -42,7 +42,7 @@
 	
 	//Main Menu Styles - Level 1
 	li.active i, li.active a:hover i {color: @sidebar-active-color; opacity: 1;}
-	li a {color: @sidebar-menu-color;display: block;padding: 11px 10px;position: relative; font-weight: 400; .transition(~"all 0.3s ease");}
+	li a {color: @sidebar-menu-color;display: block;padding: 11px 10px;position: relative; font-weight: 400; }
 	a:hover {background-color: @sidebar-hover-bg; color: @sidebar-hover-color; 
 		i {color: @sidebar-hover-color; opacity: 1;}
 	}
