--- a/app/views/templates/people_renderer.html
+++ b/app/views/templates/people_renderer.html
@@ -1,11 +1,11 @@
 <div class="widget">
     <div class="widget-simple" ng-class="['themed-background-dark','themed-background-dark-night','themed-background-dark-amethyst', 'themed-background-dark-modern', 'themed-background-dark-autumn', 'themed-background-dark-flatie', 'themed-background-dark-spring', 'themed-background-dark-fancy', 'themed-background-dark-fire'][$index % 9]">
         <div>
-            <a ng-click="viewUser(item.path.key)" title="View {{user.name | words:0}}'s Profile"><img ng-src="{{item.value.avatar || item.value.linkedin.pictureUrl || '/public/blank_avatar.png'}}" alt="{{item.value.name}}" class="widget-image img-circle pull-left"></a>
+            <a ng-click="viewUser($index)" title="View {{item.value.name | words:0}}'s Profile"><img ng-src="{{item.value.avatar || item.value.linkedin.pictureUrl || '/public/blank_avatar.png'}}" alt="{{item.value.name}}" class="widget-image img-circle pull-left"></a>
         </div>
         <h4 class="widget-content widget-content-light">
             <div ng-class="['themed-color','themed-color-night','themed-color-amethyst', 'themed-color-modern', 'themed-color-autumn', 'themed-color-flatie', 'themed-color-spring', 'themed-color-fancy', 'themed-color-fire'][$index % 9]">
-                <a ng-click="viewUser(item.path.key)" title="View {{user.name | words:0}}'s Profile" style="color: inherit; text-decoration: none;"><strong>{{item.value.name}}</strong></a>
+                <a ng-click="viewUser($index)" title="View {{item.value.name | words:0}}'s Profile" style="color: inherit; text-decoration: none;"><strong>{{item.value.name}}</strong></a>
                 <a ng-show="{{(item.value.linkedin.summary).length > 0}}" title="Show Summary" ng-click="showSummary = !showSummary" class="btn btn-xs" ng-class="['themed-color','themed-color-night','themed-color-amethyst', 'themed-color-modern', 'themed-color-autumn', 'themed-color-flatie', 'themed-color-spring', 'themed-color-fancy', 'themed-color-fire'][$index % 9]" style="float:right">
                     <i class="fa fa-chevron-down fa-fw"></i>
                 </a>
