--- a/app/views/mentors.html
+++ b/app/views/mentors.html
@@ -6,7 +6,7 @@
             <div class="row">
                 <!-- Main Title (hidden on small devices for the statistics to fit) -->
                 <div class="col-md-4 col-lg-6 hidden-xs hidden-sm">
-                    <h1><strong>Bend</strong>, Oregon<br><small>Welcome {{user.name | words:0}}!</small></h1>
+                    <h1><strong>Bend</strong>, Oregon<br><small>Welcome {{user.value.name | words:0}}!</small></h1>
                 </div>
                 <!-- END Main Title -->
     
