switched to html5 mode

--- a/app/views/templates/people_renderer.html
+++ b/app/views/templates/people_renderer.html
@@ -16,6 +16,6 @@
     </div>
     <div class="widget-extra" ng-show="showSummary">
         <h4 class="sub-header">Summary</h4>
-        <p>{{item.value.linkedin.summary}}</p>
+        <p style="white-space:pre-wrap;">{{item.value.linkedin.summary}}</p>
     </div>
 </div>
