--- a/app/views/templates/people_renderer.html
+++ b/app/views/templates/people_renderer.html
@@ -1,5 +1,5 @@
 <div class="widget">
-    <div class="widget-simple" ng-class="['themed-background-dark','themed-background-dark-night','themed-background-dark-amethyst', 'themed-background-dark-autumn', 'themed-background-dark-flatie', 'themed-background-dark-spring', 'themed-background-dark-fancy', 'themed-background-dark-fire'][$index % 8]">
+    <div style="overflow: hidden;" class="widget-simple" ng-class="['themed-background-dark','themed-background-dark-night','themed-background-dark-amethyst', 'themed-background-dark-autumn', 'themed-background-dark-flatie', 'themed-background-dark-spring', 'themed-background-dark-fancy', 'themed-background-dark-fire'][$index % 8]">
         <div>
             <a ng-click="viewUser($index)" title="View {{item.value.name | words:0}}'s Profile"><img ng-src="{{item.value.avatar || item.value.linkedin.pictureUrl || '/public/blank_avatar.png'}}" alt="{{item.value.name}}" class="widget-image img-circle pull-left"></a>
         </div>
