--- a/app/views/login.html
+++ b/app/views/login.html
@@ -21,8 +21,8 @@
 							</div>
 						</div>
 					</div>
-					<div ng-show="alert">
-						<alert type="{{alert.type}}" style="margin: 2px;" close="closeAlert($index)"><span ng-bind-html="alert.msg | safe_html"></alert>
+					<div ng-show="alert.global">
+						<alert type="{{alert.global.type}}" style="margin: 2px;" close="closeAlert($index)"><span ng-bind-html="alert.global.msg | safe_html"></alert>
 					</div>
 					<div class="panel-footer">
 						<a class="pull-left btn btn-link" style="padding-left:0">Forgot password?</a>
