--- a/app/views/user_profile.html
+++ b/app/views/user_profile.html
@@ -7,6 +7,9 @@
 		                <div class="btn-group hidden-xs" data-dropdown>
 		                    <button class="btn btn-default dropdown-toggle" data-toggle='dropdown'><span class="hidden-sm"> Edit </span><span class="caret"></span></button>
 		                    <ul class="dropdown-menu">
+		                        <li><a ng-if="isLeader" ng-click="viewRoles()">Assign Roles</a></li>
+		                    </ul>
+		                    <ul class="dropdown-menu">
 		                        <li><a ng-click="removeProfile(global.profile.path.key)">Delete Profile</a></li>
 		                    </ul>
 		                </div>
@@ -55,8 +58,8 @@
 												<tr>
 													<td>Social</td>
 													<td>
-														<a href="#" class="btn btn-social btn-twitter" target="_blank"><i class="fa fa-twitter"></i></a>
-														<a href="{{global.profile.value.linkedin.publicProfileUrl}}" class="btn btn-social btn-linkedin" target="_blank"><i class="fa fa-linkedin"></i></a>
+														<a href="#" class="btn btn-social btn-twitter-alt" target="_blank"><i class="fa fa-twitter"></i></a>
+														<a href="{{global.profile.value.linkedin.publicProfileUrl}}" class="btn btn-social btn-linkedin-alt" target="_blank"><i class="fa fa-linkedin"></i></a>
 													</td>
 												</tr>
 											</tbody>
